Added Bootstrap Link Bar and Signup Button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to My App</h1>
-<p>Sign up <%= link_to "here","#" %></p>
+
+<div class="jumbotron">
+	<h1>Welcome to My App</h1>
+	<p>Click here to sign up <%= link_to "Sign Up","#", class: "btn-lg btn-primary" %></p>
+</div>
