Added color customizations for links and backgrounds

--- a/app/assets/stylesheets/bootstrap.customization.css.scss
+++ b/app/assets/stylesheets/bootstrap.customization.css.scss
@@ -1,1 +1,7 @@
+$body-bg: 										#2ecc71;
+$navbar-inverse-bg:						#2ab966;
+$navbar-inverse-link-color: 	#ecf0f1;
+$brand-primary: 							#e67e22;
+$jumbotron-bg: 								#2980b9;
+
 @import 'bootstrap';
