--- a/app/assets/stylesheets/bootstrap.customization.css.scss
+++ b/app/assets/stylesheets/bootstrap.customization.css.scss
@@ -1,7 +1,7 @@
-$body-bg: 										#2ecc71;
-$navbar-inverse-bg:						#2ab966;
-$navbar-inverse-link-color: 	#ecf0f1;
-$brand-primary: 							#e67e22;
-$jumbotron-bg: 								#2980b9;
+$body-bg: 										white;
+$navbar-inverse-bg:						#2980b9;
+$navbar-inverse-link-color: 	white;
+$brand-primary: 							#2980b9;
+$jumbotron-bg: 								#ecf0f1;
 
 @import 'bootstrap';
