Fixed coloring and layout to match video

--- a/app/assets/stylesheets/bootstrap.customization.css.scss
+++ b/app/assets/stylesheets/bootstrap.customization.css.scss
@@ -5,3 +5,11 @@ $brand-primary: 							#2980b9;
 $jumbotron-bg: 								#ecf0f1;
 
 @import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
