--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,10 @@
 
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>Welcome to My App</h1>
-	<p>Click here to sign up <%= link_to "Sign Up","#", class: "btn-lg btn-primary" %></p>
+	
+	<p>
+       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+ 	</p>
+ 	
 </div>
