--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,8 +16,10 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li>
+        
           <% if user_signed_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
@@ -27,7 +29,7 @@
                 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
               </ul>
           <% else %>
-             <li><%= link_to "Login", about_path %></li>
+             <li><%= link_to "Login", new_user_session_path %></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
