Add container for cleaner appearance of forms (more narrow)

--- a/app/assets/stylesheets/bootstrap.customization.css.scss
+++ b/app/assets/stylesheets/bootstrap.customization.css.scss
@@ -13,3 +13,9 @@ $jumbotron-bg: 								#ecf0f1;
 .navbar-brand {
      font-weight: bold;
 }
+
+.container-narrow-form {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 500px; 
+}
