--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,46 @@
-<div class="panel panel-default">
-
-	<div class="panel-heading">
-		<h1>Sign up</h1>
-	</div>
-
-	<div class="panel-body">
-		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-		  <%= devise_error_messages! %>
-
-		  
-		  <!-- Email Entry Form -->
-		  <div class="form-group">
-			  <%= f.label :email %><br />
-			  <%= f.email_field :email, autofocus: true, class: "form-control" %>
-			 </div>
-
-			<!-- Password Entry Form -->
-		  <div class="form-group">
-		  	<%= f.label :password %><br />
-		    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-		  </div>
-
-		  <!-- Password Confirmation Form -->
-		  <div class="form-group">
-		  	<%= f.label :password_confirmation %><br />
-		    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-		  </div>
-
-		  <!-- Signup (submit) Button -->
-		  <div>
-		  	<%= f.submit "Sign up", class: "btn btn-primary" %>
-		  </div>
-
-		<% end %>
-	</div>
-
-	<div class="panel-footer">
-		<%= render "devise/shared/links" %>
-	</div>
+<div class="container-narrow-form">
+  
+  <div class="panel panel-default">
+  
+    <div class="panel-heading">
+      <h1>Sign up</h1>
+    </div>
+  
+    <div class="panel-body">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+  
+        
+        <!-- Email Entry Form -->
+        <div class="form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, class: "form-control" %>
+         </div>
+  
+        <!-- Password Entry Form -->
+        <div class="form-group">
+          <%= f.label :password %><br />
+          <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        </div>
+  
+        <!-- Password Confirmation Form -->
+        <div class="form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+        </div>
+  
+        <!-- Signup (submit) Button -->
+        <div>
+          <%= f.submit "Sign up", class: "btn btn-primary" %>
+        </div>
+  
+      <% end %>
+    </div>
+  
+    <div class="panel-footer">
+      <%= render "devise/shared/links" %>
+    </div>
+  
+  </div>
 
 </div>
