--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,12 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
 
-          <li><%= link_to "Home", root_path %></li>
+          <li>
+              <% if user_signed_in? %>
+                <%= link_to 'New Pin', new_pin_path %>
+              <% end %>
+          </li>
+
           <li><%= link_to "About", about_path %></li>
         
           <% if user_signed_in? %>
