Removed images and changed home file

--- a/app/assets/stylesheets/bootstrap.customization.css.scss
+++ b/app/assets/stylesheets/bootstrap.customization.css.scss
@@ -1,8 +1,8 @@
-$body-bg: 										white;
+$body-bg: 										#ecf0f1;
 $navbar-inverse-bg:						#2980b9;
 $navbar-inverse-link-color: 	white;
 $brand-primary: 							#2980b9;
-$jumbotron-bg: 								#ecf0f1;
+$jumbotron-bg: 								white;
 
 @import 'bootstrap';
 
