--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,17 +1,26 @@
+<%= render 'pages/home' unless user_signed_in? %>
+
 <div id="pins" class="transitions-enabled">
 
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
-      <%= image_tag pin.image.url(:medium) %>
+      <%= link_to (image_tag pin.image.url(:medium)), pin %>
       <div class="panel-body">
 
-        <%= pin.description %>
-        <%= pin.user.try(:email) %>
-        <%= link_to 'Show', pin %>
+        <p><%= pin.description %></p>
+        <p><strong><%= pin.user.try(:email) %></strong></p>
 
         <% if pin.user == current_user %>
-          <%= link_to 'Edit', edit_pin_path(pin) %>
-          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <p><div class="action">
+            <%= link_to edit_pin_path(pin) do %>
+              <span class="glyphicon glyphicon-edit"></span>
+            <% end %>
+
+            <%= link_to pin, method: :delete, data: { confirm: 'Are you sure you want to delete this pin?' } do %>
+              <span class="glyphicon glyphicon-trash"></span>
+            <% end %>
+          
+          </div></p>
         <% end %>
       </div>
     </div>
