--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,12 +1,24 @@
-<%= image_tag @pin.image.url(:medium) %>
-
-<p>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-</p>
+<%= link_to 'Back', pins_path, class: "btn btn-primary" %>
 
 <% if @pin.user == current_user %>
-	<%= link_to 'Edit', edit_pin_path(@pin) %>
-<% end %>
+			<%= link_to 'Edit', edit_pin_path(@pin), class: "btn btn-default" %>
+		<% end %>
 
-<%= link_to 'Back', pins_path %>
+<br><br>
+
+<div class="row">
+	<div class="col-md-offset-2 col-md-8">
+		<div class="panel panel-default">
+			
+			<div class="panel panel-heading center">
+				<%= image_tag @pin.image.url(:medium) %>
+			</div>
+
+			<div class="panel-body">	
+			<p><%= @pin.description %></p>
+			<p><strong><%= @pin.user.try(:email) %></strong></p>
+			
+			</div>
+		</div>
+	</div>
+</div>
