Added names to users, added validation for pins/users

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -16,7 +16,7 @@
 
 			<div class="panel-body">	
 			<p><%= @pin.description %></p>
-			<p><strong><%= @pin.user.try(:email) %></strong></p>
+			<p><strong><%= @pin.user.try(:name) %></strong></p>
 			
 			</div>
 		</div>
