--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,9 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
   
+        <div class="form-group"><%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true, class: "form-control" %></div>
+
         <div class="form-group"><%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
   
@@ -34,7 +37,7 @@
     <div class="panel-footer">
       <h3>Cancel Account</h3>
   
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary" %></p>
+      <p>Destroy Account?? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary" %></p>
   
       <%= link_to "Back", :back %>
     </div>
