--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -8,7 +8,7 @@
       <div class="panel-body">
 
         <p><%= pin.description %></p>
-        <p><strong><%= pin.user.try(:email) %></strong></p>
+        <p><strong><%= pin.user.try(:name) %></strong></p>
 
         <% if pin.user == current_user %>
           <p><div class="action">
